# map-stack

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
01_geometria/: exemplo.py  exercicios.py
02_postgis/: 01_setup.sql  02_exemplo.sql
03_api/: database.py  exercicios.py  exercicios_movimento.py  geojson.py  main.py  models.py  simulador.py
04_react/: index.html  package-lock.json  package.json  vite.config.ts
04_react/src/: App.tsx  FpsMeter.tsx  LaboratorioPerformance.tsx  MapaBase.tsx  MapaTempoReal.tsx  api.ts  index.css
backend/: pyproject.toml
backend/02_postgis/: 01_setup.sql  03_exercicios.sql
backend/api/: main.py  models.py
backend/api/ingest/: base.py  cache_rede_viaria.json  frota_viaria.py  mqtt_adapter.py  mqtt_publicador_teste.py  rede_viaria.py  simulador_adapter.py
backend/tests/: conftest.py  test_api.py  test_geometria.py  test_ingest.py  test_movimento.py  test_postgis.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  CamadaTelemetriaAtual.tsx  CamadaTempoReal.tsx  LaboratorioPerformance.tsx  MapaBase.tsx  MapaTempoReal.tsx  api.ts  geo.test.ts  geo.ts  geraPontos.test.ts  geraPontos.ts  leaflet-icon-fix.ts  types.ts
